[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/window_dark.png" type="Texture" id=1]
[ext_resource path="res://Src/Entrance.gd" type="Script" id=2]
[ext_resource path="res://Assets/entrance.png" type="Texture" id=3]
[ext_resource path="res://Assets/header.png" type="Texture" id=4]
[ext_resource path="res://Assets/alagard_by_pix3m-d6awiwp.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[node name="Entrance" type="NinePatchRect"]
margin_left = 18.0
margin_top = 455.0
margin_right = 258.0
margin_bottom = 765.0
texture = ExtResource( 1 )
patch_margin_left = 18
patch_margin_top = 18
patch_margin_right = 18
patch_margin_bottom = 18
script = ExtResource( 2 )

[node name="EntranceImage" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 73.0
margin_right = 235.0
margin_bottom = 303.0
texture = ExtResource( 3 )

[node name="EntranceButton" type="Button" parent="EntranceImage"]
margin_right = 230.0
margin_bottom = 230.0
flat = true

[node name="Unavailable" type="Label" parent="EntranceImage"]
margin_right = 230.0
margin_bottom = 230.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="EntranceHeader" type="NinePatchRect" parent="."]
margin_right = 240.0
margin_bottom = 80.0
texture = ExtResource( 4 )
patch_margin_left = 65
patch_margin_top = 34
patch_margin_right = 85
patch_margin_bottom = 32

[node name="EntranceLabel" type="Label" parent="EntranceHeader"]
margin_right = 240.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.152941, 0.121569, 0.105882, 1 )
custom_fonts/font = SubResource( 1 )
text = "Default"
align = 1
valign = 1

[connection signal="mouse_entered" from="EntranceImage/EntranceButton" to="." method="_on_EntranceButton_mouse_entered"]
[connection signal="mouse_exited" from="EntranceImage/EntranceButton" to="." method="_on_EntranceButton_mouse_exited"]
[connection signal="pressed" from="EntranceImage/EntranceButton" to="." method="_on_EntranceButton_pressed"]
